fixed unaligned icon of trust

--- a/newrai/app/static/css/app.css
+++ b/newrai/app/static/css/app.css
@@ -1062,12 +1062,10 @@ section {
 }
 
 .swiper-slide {
-	text-align: center;
-	font-size: 18px;
-	background: #fff;
 	display: flex;
-	justify-content: center;
+	flex-direction: column;
 	align-items: center;
+	justify-content: center;
 }
 
 .swiper-button-prev,
